Revision history for Email-Sender-Transport-SMTPS

{{$NEXT}}

0.03  2014-08-06 22:44:06 CST
        - add debug option

0.02  2013-11-30 11:24:45 CST
		- more examples

0.01  2013-11-30 11:19:50 CST
        - Initial release