@@ -1,6 +1,7 @@
 Revision history for Email-Sender-Transport-SMTPS
 
 {{$NEXT}}
+        - DEPRECATED in favour of Email::Sender::Transport::SMTP
 
 0.03  2014-08-06 22:44:06 CST
         - add debug option
